--- a/lang/id.json
+++ b/lang/id.json
@@ -1,10 +1,10 @@
 {
   "hero": {
     "title": "🐦‍🔥 Indomon Quest",
-    "subtitle": "Jelajahi dunia monster Nusantara. Tangkap, latih, perdagangkan, dan jadilah Founder. Beli Founder Pack sekarang untuk keuntungan eksklusif, referral, & uang nyata."
+    "subtitle": "Jelajahi dunia monster Nusantara. Tangkap, latih, perdagangkan, dan jadilah Founder. Beli Founder Pack sekarang untuk keuntungan."
   },
   "referral": {
-    "title": "Eksklusif, Referral & Uang Nyata",
+    "title": "eksklusif, referral & uang nyata",
     "content": [
       "Indomon Quest adalah RPG berbasis teks asal Indonesia yang menggabungkan eksplorasi, koleksi monster, dan ekonomi virtual berbasis profesi.",
       "🎮 Core Gameplay: Eksplorasi → Pertarungan → Tangkap → Perdagangan → Upgrade → Eksplorasi lagi.",
