--- a/lang/en.json
+++ b/lang/en.json
@@ -1,10 +1,10 @@
 {
   "hero": {
     "title": "🐦‍🔥 Indomon Quest",
-    "subtitle": "Explore the world of Nusantara monsters. Capture, train, trade, and become a Founder. Buy Founder Pack now for exclusive benefits, referrals & real money."
+    "subtitle": "Explore the world of Nusantara monsters. Capture, train, trade, and become a Founder. Buy Founder Pack now for."
   },
   "referral": {
-    "title": "Exclusive, Referral & Real Money",
+    "title": "exclusive, referral & real money",
     "content": [
       "Indomon Quest is an Indonesian Text-Based RPG that combines exploration, monster collection, and a profession-based virtual economy.",
       "🎮 Core Gameplay: Explore → Battle → Capture → Trade → Upgrade → Explore again.",
