--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "title": "🐦‍🔥 Indomon Quest",
-    "subtitle": "Explore the world of Nusantara monsters. Capture, train, trade, and become a Founder. Buy Founder Pack now for."
+    "subtitle": "Explore the world of Nusantara monsters. Capture, train, trade, and become a Founder. Buy Founder Pack now for"
   },
   "referral": {
     "title": "exclusive, referral & real money",
