--- a/lang/id.json
+++ b/lang/id.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "title": "🐦‍🔥 Indomon Quest",
-    "subtitle": "Jelajahi dunia monster Nusantara. Tangkap, latih, perdagangkan, dan jadilah Founder. Beli Founder Pack sekarang untuk keuntungan."
+    "subtitle": "Jelajahi dunia monster Nusantara. Tangkap, latih, perdagangkan, dan jadilah Founder. Beli Founder Pack sekarang untuk keuntungan"
   },
   "referral": {
     "title": "eksklusif, referral & uang nyata",
