--- a/lang/id.json
+++ b/lang/id.json
@@ -66,8 +66,8 @@
     "title": "🎁 Founder Pack Diskon 90%",
     "gold": {
       "name": "Gold Pack",
-      "price_old": "Rp 100.000",
-      "price_new": "Rp 10.000",
+      "price_old": "Rp100.000",
+      "price_new": "Rp10.000",
       "referral": "Bonus Referral: 10%",
       "items": [
         "🪙 1x Monster Rare (acak)",
@@ -79,8 +79,8 @@
     },
     "platinum": {
       "name": "Platinum Pack",
-      "price_old": "Rp 500.000",
-      "price_new": "Rp 50.000",
+      "price_old": "Rp500.000",
+      "price_new": "Rp50.000",
       "referral": "Bonus Referral: 10%",
       "items": [
         "💿 1x Monster Legendary (acak)",
@@ -93,8 +93,8 @@
     },
     "diamond": {
       "name": "Diamond Pack",
-      "price_old": "Rp 1.000.000",
-      "price_new": "Rp 100.000",
+      "price_old": "Rp1.000.000",
+      "price_new": "Rp100.000",
       "referral": "Bonus Referral: 10%",
       "items": [
         "💎 1x Monster Legendary Eksklusif",
@@ -111,11 +111,11 @@
   },
   "roadmap": {
     "title": "Roadmap",
-    "q4_2025": "Alpha Tertutup (Founder saja), core loop: eksplorasi, battle, tangkap, website & wiki (info + panduan).",
-    "q1_2026": "Beta Founder & Pra-Registrasi: profesi dasar + Market + PvP Arena awal.",
-    "q2_2026": "Open Beta: Prestige Breeder terbuka + leaderboard.",
-    "q3_2026": "Rilis Penuh: Update lintas region, event hadiah fiat, optimasi mobile.",
-    "post": "Monster musiman, profesi baru, fitur permintaan komunitas."
+    "q4_2025": "Q4 2025 - Alpha Tertutup (Founder saja), core loop: eksplorasi, battle, tangkap, website & wiki (info + panduan).",
+    "q1_2026": "Q1 2026 - Beta Founder & Pra-Registrasi: profesi dasar + pasar + PvP Arena awal.",
+    "q2_2026": "Q2 2026 - Open Beta: Prestige Breeder terbuka + leaderboard.",
+    "q3_2026": "Q3 2026 - Rilis Penuh: Update lintas region, event hadiah fiat, optimasi mobile.",
+    "post": "Pasca Peluncuran - Monster musiman, profesi baru, fitur permintaan komunitas."
   },
   "faq": {
     "title": "FAQ — Pertanyaan yang Sering Ditanyakan",
